<resources>
    <string name="app_name">My Application</string>
    <string name="register_now">Register now</string>
    <string name="new_member">New member?</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome back</string>
    <string name="under_title">sign in to access your account</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="map">map</string>
    <string name="get_started">Get Started</string>
    <string name="login">Log in</string>
    <string name="already_member">Already a member?</string>
    <string name="fullname">Enter your full name</string>
    <string name="phone_number">Phone number</string>
</resources>
