<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/underTitle">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/email"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="25dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roadImage">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/email"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="25dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_now"
        android:textColor="#6C63FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newMember" />

    <TextView
        android:id="@+id/newMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:text="@string/new_member"
        app:layout_constraintBaseline_toBaselineOf="@+id/registerNow"
        app:layout_constraintStart_toStartOf="@+id/nextButton" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/forgot_password"
        android:textColor="#6C63FF"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/email"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/newMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/roadImage"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="210dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="38dp"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/roadImage"
        app:layout_constraintStart_toStartOf="@+id/roadImage" />

    <TextView
        android:id="@+id/underTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="15dp"
        android:text="@string/under_title"
        app:layout_constraintEnd_toEndOf="@+id/welcomeBack"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBack" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="279dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#F00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roadImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
